--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="16x16"  href="./src/assets/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>nuance | Your Online Bookstore Haven!</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="http://localhost:5173/"></script>
+    <script type="module" src="./src/main.jsx"></script>
   </body>
 </html>
