--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="16x16"  href="./src/assets/favicon-16x16.png">
-    <meta name="msapplication-TileColor" content="#ffffff">
+    <link rel="icon" type="image/svg+xml" href="./src/assets/favicon/favicon.svg">
+    <link rel="icon" type="image/png" href="./src/assets/favicon/favicon.png">
+    <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./src/header.css">
     <title>nuance | Your Online Bookstore Haven!</title>
   </head>
   <body>
