--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/favicon/favicon.svg">
     <link rel="icon" type="image/png" href="./src/assets/favicon/favicon.png">
-    <link href="https://fonts.cdnfonts.com/css/roboto" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="fonts/material-design-iconic-font/css/material-design-iconic-font.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./src/header.css">
+    <link rel="stylesheet" href="./src/slides.css">
     <title>nuance | Your Online Bookstore Haven!</title>
   </head>
   <body>
