#route configuration started, database loaded and endpoint tested

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/public/assets/fonts/Merriweather.css">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
