#designing the cart and profile pages

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 
+    <meta name="csrf-token" content="YOUR_CSRF_TOKEN_HERE">
+
     <link rel="stylesheet" href="/public/assets/fonts/Merriweather.css">
 
 
